--- a/src/app/@theme/components/header/header.component.scss
+++ b/src/app/@theme/components/header/header.component.scss
@@ -50,6 +50,11 @@
       white-space: nowrap;
       text-decoration: none;
     }
+
+    .logo img {
+      height: auto;
+      max-width: 100%;
+    }
   }
 
   @include media-breakpoint-down(sm) {
