--- a/src/app/pages/vivaeros/vivaeros.component.html
+++ b/src/app/pages/vivaeros/vivaeros.component.html
@@ -17,3 +17,13 @@
     </nb-card>
   </div>
 </div>
+
+<div class="row">
+  <div class="col-xxl-9">
+    <ngx-country-orders></ngx-country-orders>
+  </div>
+
+  <div class="col-xxl-3">
+    <ngx-progress-section></ngx-progress-section>
+  </div>
+</div>
