--- a/src/app/pages/vivaeros/vivaeros.component.html
+++ b/src/app/pages/vivaeros/vivaeros.component.html
@@ -19,11 +19,23 @@
 </div>
 
 <div class="row">
-  <div class="col-xxl-9">
-    <ngx-country-orders></ngx-country-orders>
-  </div>
-
   <div class="col-xxl-3">
     <ngx-progress-section></ngx-progress-section>
+    <nb-card >
+      <nb-card-body>
+        <div class="progress-info" >
+          <div class="subtitle">Today's website hits</div>
+          <div class="h3">1020</div>
+        </div>
+        <div class="progress-info" >
+          <div class="subtitle">This month website hits</div>
+          <div class="h3">12000</div>
+        </div>
+      </nb-card-body>
+    </nb-card>
+  </div>
+
+  <div class="col-xxl-9">
+    <ngx-country-orders></ngx-country-orders>
   </div>
 </div>
