Adding Card Functionality

--- a/src/app/pages/vivaeros/vivaeros.component.html
+++ b/src/app/pages/vivaeros/vivaeros.component.html
@@ -20,19 +20,8 @@
 
 <div class="row">
   <div class="col-xxl-3">
-    <ngx-progress-section></ngx-progress-section>
-    <nb-card >
-      <nb-card-body>
-        <div class="progress-info" >
-          <div class="subtitle">Today's website hits</div>
-          <div class="h3">1020</div>
-        </div>
-        <div class="progress-info" >
-          <div class="subtitle">This month website hits</div>
-          <div class="h3">12000</div>
-        </div>
-      </nb-card-body>
-    </nb-card>
+    <ngx-progress-section [progressInfoData] = progressInfoData></ngx-progress-section>
+    <ngx-progress-section [progressInfoData] = webhits></ngx-progress-section>
   </div>
 
   <div class="col-xxl-9">
