--- a/src/app/pages/vivaeros/progress-section/progress-section.component.html
+++ b/src/app/pages/vivaeros/progress-section/progress-section.component.html
@@ -2,8 +2,7 @@
   <nb-card-body>
     <div class="progress-info" *ngFor="let item of progressInfoData">
       <div class="subtitle">{{ item.title }}</div>
-      <div class="h3">{{ item.value | ngxNumberWithCommas }} €</div>
-      <nb-progress-bar [value]="item.activeProgress"></nb-progress-bar>
+      <div class="h3">{{ item.value | ngxNumberWithCommas }} <span *ngIf="item.isCurrency"> €</span></div>
       <div class="caption description">
         <bdi>{{ item.description }}</bdi>
       </div>
