[VIVAEROS]: Adding New Styles

--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -1,8 +1,8 @@
 <div class="header-container">
   <div class="logo-container">
-    <a (click)="toggleSidebar()" href="#" class="sidebar-toggle">
+    <!--<a (click)="toggleSidebar()" href="#" class="sidebar-toggle">
       <nb-icon icon="menu-2-outline"></nb-icon>
-    </a>
+    </a> -->
     <a class="logo" href="#" (click)="navigateHome()"><img src="../../../../assets/images/logo.png" /></a>
 
   </div>
