--- a/src/app/@theme/styles/themes.scss
+++ b/src/app/@theme/styles/themes.scss
@@ -5,6 +5,7 @@
 
 $nb-themes: nb-register-theme((
   layout-padding-top: 2.25rem,
+  layout-background-color: #dddfe4,
 
   menu-item-icon-margin: 0 0.5rem 0 0,
 
