--- a/src/app/pages/vivaeros/vivaeros.component.html
+++ b/src/app/pages/vivaeros/vivaeros.component.html
@@ -4,7 +4,8 @@
       <nb-card-body>
         <echarts-pie
         [sum]="sum"
-        [chartData]="chartData"></echarts-pie>
+        [chartData]="chartData"
+        [status]="compareStr"></echarts-pie>
       </nb-card-body>
     </nb-card>
   </div>
@@ -22,7 +23,7 @@
     </div>
 
     <div class="row">
-      <div class="col-xxxl-12 col-md-12">
+      <div class="col-xxxl-12 col-md-12 text-center">
         <ngx-progress-section [progressInfoData] = progressInfoData></ngx-progress-section>
       </div>
     </div>
@@ -31,11 +32,67 @@
 </div>
 
 <div class="row">
-  <div class="col-xxl-12">
-    <ngx-country-orders></ngx-country-orders>
+  <div class="col-xxl-8">
+    <ngx-country-orders
+    [activeUsersByDevice] = "activeUsersByDevice"
+    [activeUsersByCountry] = "activeUsersByCountry"></ngx-country-orders>
   </div>
 
-  <div class="col-xxl-3">
-    <ngx-progress-section [progressInfoData] = webhits></ngx-progress-section>
+  <div class="col-xxl-4 text-center">
+    <div class="row">
+      <div class="col-md-12 col-lg-12 col-xxl-12">
+        <nb-card class="list-card">
+          <nb-card-header>
+            <strong style="font-size: 1.5rem;">Countries Ranking (Last 7 days)</strong>
+          </nb-card-header>
+          <nb-card-body>
+            <nb-list>
+              <nb-list-item *ngFor="let country of activeUsersByCountry">
+                <span style="flex:1;">{{ country.country }}</span>
+                <span style="flex:1;">{{ country.activeUsers }}</span>
+              </nb-list-item>
+            </nb-list>
+          </nb-card-body>
+        </nb-card>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12 col-lg-12 col-xxl-12">
+        <!-- <ngx-progress-section [progressInfoData] = webhits></ngx-progress-section> -->
+        <nb-card class="list-card">
+          <nb-card-header>
+            <strong style="font-size: 1.5rem;">Shop Ranking</strong>
+          </nb-card-header>
+          <nb-card-body>
+            <nb-list>
+              <nb-list-item class="item" *ngFor="let shop of shopRanking">
+                <span style="flex:1;">{{ shop.shop }}</span>
+                <span style="flex:1;">{{ shop.sum }}</span>
+              </nb-list-item>
+            </nb-list>
+          </nb-card-body>
+        </nb-card>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12 col-lg-12 col-xxl-12">
+        <!-- <ngx-progress-section [progressInfoData] = webhits></ngx-progress-section> -->
+        <nb-card class="list-card">
+          <nb-card-header>
+            <strong style="font-size: 1.5rem;">Device Usage (Last 7 days)</strong>
+          </nb-card-header>
+          <nb-card-body>
+            <nb-list>
+              <nb-list-item class="item" *ngFor="let device of activeUsersByDevice">
+                <span style="flex:1;">{{ device.device }}</span>
+                <span style="flex:1;">{{ device.activeUsers }}</span>
+              </nb-list-item>
+            </nb-list>
+          </nb-card-body>
+        </nb-card>
+      </div>
+    </div>
   </div>
 </div>
